[tool.poetry]
name = "youtube-transcript-provider"
version = "0.1.0"
description = ""
authors = ["Aryan Kothari <87589047+thearyadev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
