[tool.poetry]
name = "youtube-transcript-provider"
version = "0.1.0"
description = ""
authors = ["Aryan Kothari <87589047+thearyadev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
black = "^24.8.0"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
youtube-transcript-api = "^0.6.2"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
